@@ -113,6 +113,12 @@ module ActiveScaffold
         end
       end
 
+      def active_scaffold_translate_select_options(options)
+        options[:include_blank] = as_(options[:include_blank]) if options[:include_blank].is_a? Symbol
+        options[:prompt] = as_(options[:prompt]) if options[:prompt].is_a? Symbol
+        options
+      end
+      
       def active_scaffold_input_singular_association(column, html_options)
         associated = @record.send(column.association.name)
 
@@ -125,6 +131,7 @@ module ActiveScaffold
         html_options.update(column.options[:html_options] || {})
         options.update(column.options)
         html_options[:name] = "#{html_options[:name]}[]" if html_options[:multiple] == true && !html_options[:name].to_s.ends_with?("[]")
+        active_scaffold_translate_select_options(options)
 
         if optgroup = options.delete(:optgroup)
           select(:record, method, grouped_options_for_select(column, select_options, optgroup), options, html_options)
@@ -174,6 +181,7 @@ module ActiveScaffold
         end
         html_options.update(column.options[:html_options] || {})
         options.update(column.options)
+        active_scaffold_translate_select_options(options)
         select(:record, column.name, options_for_select, options, html_options)
       end
 
